--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=${SQL_SHOW:true}
 spring.jpa.properties.hibernate.format_sql=${SQL_FORMAT:true}
 
-spring.datasource.url=jdbc:mysql://${DB_HOST:languagedatabase.mysql.database.azure.com}:3306/${DB:languagedatabase}
+spring.datasource.url=jdbc:mysql://${DB_HOST:testserver-martin.mysql.database.azure.com}:3306/${DB:test}
 spring.datasource.username=${DB_USERNAME:martin}
-spring.datasource.password=${DB_PASSWORD:Test1234}
+spring.datasource.password=${DB_PASSWORD}
 
 
 
