--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.format_sql=${SQL_FORMAT:true}
 
 spring.datasource.url=jdbc:mysql://${DB_HOST:testserver-martin.mysql.database.azure.com}:3306/${DB:test}
 spring.datasource.username=${DB_USERNAME:martin}
-spring.datasource.password=${DB_PASSWORD:test}
+spring.datasource.password=${DB_PASSWORD:Test1234}
 
 
 
